--- a/house.html
+++ b/house.html
@@ -7,74 +7,88 @@
 </head>
 <body>
     <canvas id="myCanvas" width="500px" height="500px" style="border: solid black 1px;"></canvas>
+    <br>
+    <br>
+    <select name="color" id="selectColor">
+        <option value="green">Green</option>
+        <option value="blue">Blue</option>
+        <option value="black">Black</option>
+        <option value="brown">Brown</option>
+        <option value="pink">Pink</option>
+    </select>
+    <br>
+    <br>
+    <button onclick="run()" id="draw">draw</button>
     <script>
         let canvas = document.getElementById("myCanvas");
         let context = canvas.getContext("2d");
         context.lineWidth = 6;
+        let color = document.getElementById("color").value;
 
-        context.beginPath();
-        context.moveTo(250, 10);
-        context.lineTo(100, 200);
-        context.lineTo(400, 200);
-        context.lineTo(250, 10);
-        context.stroke();
-        context.fillStyle = "#975B5B";
-        context.fill();
+        function run()           
+                context.beginPath();
+                context.moveTo(250, 10);
+                context.lineTo(100, 200);
+                context.lineTo(400, 200);
+                context.lineTo(250, 10);
+                context.stroke();
+                context.fillStyle = "#975B5B";
+                context.fill();
 
-        context.beginPath();
-        context.moveTo(100, 200);
-        context.lineTo(100, 400);
-        context.lineTo(400, 400);
-        context.lineTo(400, 200);
-        context.lineTo(100, 200);
-        context.stroke()
-        context.fillRect(100, 200, 300, 200);
+                context.beginPath();
+                context.moveTo(100, 200);
+                context.lineTo(100, 400);
+                context.lineTo(400, 400);
+                context.lineTo(400, 200);
+                context.lineTo(100, 200);
+                context.stroke()
+                context.fillRect(100, 200, 300, 200);
 
-        context.fillStyle = "black";
-        context.fillRect(125, 215, 110, 70)
-        context.fillRect(265, 215, 110, 70)
-        context.fillRect(265, 300, 110, 70)
+                context.fillStyle = "black";
+                context.fillRect(125, 215, 110, 70)
+                context.fillRect(265, 215, 110, 70)
+                context.fillRect(265, 300, 110, 70)
 
-        context.strokeStyle = "#975B5B";
-        context.beginPath();
-        context.moveTo(180, 215);
-        context.lineTo(180, 285);
-        context.stroke();
-        context.beginPath();
-        context.moveTo(125, 250);
-        context.lineTo(235, 250);
-        context.stroke();
+                context.strokeStyle = "#975B5B";
+                context.beginPath();
+                context.moveTo(180, 215);
+                context.lineTo(180, 285);
+                context.stroke();
+                context.beginPath();
+                context.moveTo(125, 250);
+                context.lineTo(235, 250);
+                context.stroke();
 
-        context.beginPath();
-        context.moveTo(320, 215);
-        context.lineTo(320, 285);
-        context.stroke();
-        context.beginPath();
-        context.moveTo(265, 250);
-        context.lineTo(375, 250);
-        context.stroke();
+                context.beginPath();
+                context.moveTo(320, 215);
+                context.lineTo(320, 285);
+                context.stroke();
+                context.beginPath();
+                context.moveTo(265, 250);
+                context.lineTo(375, 250);
+                context.stroke();
 
-        context.beginPath();
-        context.moveTo(320, 300);
-        context.lineTo(320, 370);
-        context.stroke();
-        context.beginPath();
-        context.moveTo(265, 335);
-        context.lineTo(375, 335);
-        context.stroke();
+                context.beginPath();
+                context.moveTo(320, 300);
+                context.lineTo(320, 370);
+                context.stroke();
+                context.beginPath();
+                context.moveTo(265, 335);
+                context.lineTo(375, 335);
+                context.stroke();
 
-        context.lineWidth = 3
-        context.strokeStyle = "black";
-        context.beginPath()
-        context.moveTo(140, 400);
-        context.lineTo(140, 310);
-        context.lineTo(210, 310);
-        context.lineTo(210, 400);
-        context.stroke();
+                context.lineWidth = 3
+                context.strokeStyle = "black";
+                context.beginPath()
+                context.moveTo(140, 400);
+                context.lineTo(140, 310);
+                context.lineTo(210, 310);
+                context.lineTo(210, 400);
+                context.stroke();
 
-        context.beginPath();
-        context.arc(195, 360, 5, 0, 2*Math.PI);
-        context.stroke();
+                context.beginPath();
+                context.arc(195, 360, 5, 0, 2*Math.PI);
+                context.stroke();
     </script>
 </body>
 </html>
